[package]
name = "gpu-alloc-vulkanalia"
version = "0.1.1"
edition = "2021"
rust-version = "1.65"
description = "`vulkanalia` backend for `gpu-alloc`"
documentation = "https://docs.rs/gpu-alloc-vulkanalia"
license = "MIT OR Apache-2.0"
keywords = ["gpu", "vulkan", "allocation"]
categories = ["graphics", "memory-management", "game-development"]
include = ["src/**/*.rs", "LICENSE-*", "README.md"]

[dependencies]
gpu-alloc-types = "0.3"
smallvec = { version = "1", features = ["union", "const_generics"] }
vulkanalia = "0.22"

tracing = { version = "0.1", features = ["attributes"], optional = true }
